data/derived/comb/progs/unify/prog0575.ml.out
Characters 130-134:
  | Cosine(e') -> cos(pi *. eval(e'))
                                ^^^^
Error: This expression has type expr but an expression was expected of type
         expr * float * float
